<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Stream App</string>
    <string name="actionbar_activity_not_found">Failed to open intent...</string>
    <string name="streams">Streams</string>
    <string name="favorites">Favorites</string>
    <string name="hashtags">Hashtags</string>
    <string name="mystream">My Stream</string>
    <string name="stream_tweets">Tweets</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="info">Info</string>
    <string name="show_users">Show Users</string>
    <string name="pull_to_refresh_pull_label">Pull to refresh...</string>
    <string name="pull_to_refresh_release_label">Release to refresh...</string>
    <string name="pull_to_refresh_refreshing_label">Loading...</string>
    <string name="pull_to_refresh_tap_label">Tap to refresh...</string>
</resources>
