<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/streams"
          android:icon="@drawable/icon"
          android:title="@string/streams" />
    <item android:id="@+id/favorites"
          android:icon="@drawable/icon"
          android:title="@string/favorites" />
    <item android:id="@+id/hashtags"
          android:icon="@drawable/hashtag"
          android:title="@string/hashtags" />
    <item android:id="@+id/mystream"
          android:icon="@drawable/icon"
          android:title="@string/mystream" />
    <item android:id="@+id/search"
          android:icon="@drawable/icon"
          android:title="@string/search" />
    <item android:id="@+id/settings"
          android:icon="@drawable/icon"
          android:title="@string/settings" />
    <item android:id="@+id/info"
          android:icon="@drawable/icon"
          android:title="@string/info" />
</menu>